--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["crypto", "cipher", "aead", "xchacha20", "xchacha20poly1305"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "0.1", git = "https://github.com/RustCrypto/traits" }
+aead = "0.1"
 chacha20 = { version = "0.2.1", features = ["zeroize"] }
 poly1305 = "0.2"
 zeroize = { version = "0.9", default-features = false }
