--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "chacha20poly1305"
-version = "0.0.0"
+version = "0.1.0"
 authors = ["RustCrypto Developers"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 description = """
 ChaCha20Poly1305 Authenticated Encryption with Additional Data Algorithm (RFC 8439)
 """
-documentation = "chacha20poly1305"
+documentation = "https://docs.rs/chacha20poly1305"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["crypto", "cipher", "aead", "xchacha20", "xchacha20poly1305"]
 categories = ["cryptography", "no-std"]
