--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -11,9 +11,17 @@ repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "aes", "aes-gcm", "encryption", "siv"]
 categories = ["cryptography", "no-std"]
 
+[[bench]]
+name = "aes-gcm-siv"
+harness = false
+
 [dependencies]
 aead = "0.1"
 aes = "0.3"
 ctr = "0.3"
 polyval = "0.1"
 subtle = { version = "2", default-features = false }
+
+[dev-dependencies]
+criterion = "0.3.0"
+criterion-cycles-per-byte = "0.1.1"
