Expose "detached" in-place encryption/decryption APIs
Exposes an `encrypt_in_place_detached()` and
`decrypt_in_place_detached()` API on all AEAD implementations in this
repository.

Until we figure out what the upstream API looks like, this commit at
least makes an in-place mode an option for those who don't want to
allocate a buffer for every encryption/decryption operation.

--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -20,6 +20,7 @@ aes = "0.3"
 ctr = "0.3"
 polyval = "0.2"
 subtle = { version = "2", default-features = false }
+zeroize = { version = "1.0.0-pre", default-features = false }
 
 [dev-dependencies]
 criterion = "0.3.0"
