aes-gcm-siv v0.2.0

--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["RustCrypto Developers"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
-description = "AES-GCM"
+description = "Pure Rust implementation of the AES-GCM Authenticated Encryption with Associated Data (AEAD) cipher"
 readme = "README.md"
 documentation = "https://docs.rs/aes-gcm"
 repository = "https://github.com/RustCrypto/AEADs"
