--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chacha20poly1305"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["RustCrypto Developers"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -20,7 +20,7 @@ maintenance = { status = "experimental" }
 aead = "0.1"
 chacha20 = { version = "0.2.1", features = ["zeroize"] }
 poly1305 = "0.5"
-zeroize = { version = "1.0.0-pre", default-features = false }
+zeroize = { version = "1", default-features = false }
 
 [features]
 default = ["xchacha20poly1305"]
