--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "xsalsa20poly1305"
 version = "0.2.0"
+description = """
+Pure Rust implementation of the XSalsa20Poly1305 (a.k.a. NaCl crypto_secretbox)
+authenticated encryption algorithm
+"""
 authors = ["RustCrypto Developers"]
 edition = "2018"
-license = "MIT OR Apache-2.0"
-description = """
-XSalsa20Poly1305 (a.k.a. NaCl crypto_secretbox) authenticated encryption algorithm
-"""
+license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/xsalsa20poly1305"
 repository = "https://github.com/RustCrypto/AEADs"
@@ -20,4 +21,4 @@ maintenance = { status = "experimental" }
 aead = "0.1"
 salsa20 = { version = "0.3.0", features = ["xsalsa20", "zeroize"] }
 poly1305 = "0.5"
-zeroize = { version = "1.0.0-pre", default-features = false }
+zeroize = { version = "1", default-features = false }
