--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "aes-gcm"
 version = "0.1.0"
+description = """
+Pure Rust implementation of the AES-GCM (Galois/Counter Mode)
+Authenticated Encryption with Associated Data (AEAD) Cipher
+with optional architecture-specific hardware acceleration
+"""
 authors = ["RustCrypto Developers"]
 edition = "2018"
-license = "MIT OR Apache-2.0"
-description = "Pure Rust implementation of the AES-GCM Authenticated Encryption with Associated Data (AEAD) cipher"
+license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/aes-gcm"
 repository = "https://github.com/RustCrypto/AEADs"
@@ -19,7 +23,7 @@ aead = "0.1"
 aes = "0.3"
 ghash = "0.2.2"
 subtle = { version = "2", default-features = false }
-zeroize = { version = "1.0.0-pre", default-features = false }
+zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
 criterion = "0.3.0"
