--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -19,15 +19,19 @@ categories = ["cryptography", "no-std"]
 maintenance = { status = "experimental" }
 
 [dependencies]
-aead = "0.2"
+aead = { version = "0.2", default-features = false }
 aes = "0.3"
-polyval = "0.3"
+polyval = { version = "0.3", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
 criterion = "0.3.0"
 criterion-cycles-per-byte = "0.1.1"
+
+[features]
+default = ["alloc"]
+alloc = ["aead/alloc"]
 
 [[bench]]
 name = "aes-gcm-siv"
