--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -19,11 +19,12 @@ categories = ["cryptography", "no-std"]
 maintenance = { status = "experimental" }
 
 [dependencies]
-aead = "0.2"
+aead = { version = "0.2", default-features = false }
 chacha20 = { version = "0.2.1", features = ["zeroize"] }
 poly1305 = "0.5"
 zeroize = { version = "1", default-features = false }
 
 [features]
-default = ["xchacha20poly1305"]
+default = ["alloc", "xchacha20poly1305"]
+alloc = ["aead/alloc"]
 xchacha20poly1305 = ["chacha20/xchacha20"]
