Add a `heapless` feature to all crates + docs to use it
Makes `heapless` a first-class feature on all crates, to simplify
`heapless` usage.

With `heapless` as a first-class feature, it becomes possible to
explicitly document heapless usage, which this commit also does.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rust:
   - nightly
 
 script:
-  - cargo test --all --release
+  - cargo test --all --release --lib
   - cargo test --all --all-features --release
 
 env:
