--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -33,6 +33,10 @@ hex-literal = "0.2"
 [features]
 default = ["alloc"]
 alloc = ["aead/alloc"]
+heapless = ["aead/heapless"]
+
+[package.metadata.docs.rs]
+all-features = true
 
 [[bench]]
 name = "aes-gcm"
