--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -27,4 +27,8 @@ zeroize = { version = "1", default-features = false }
 [features]
 default = ["alloc", "xchacha20poly1305"]
 alloc = ["aead/alloc"]
+heapless = ["aead/heapless"]
 xchacha20poly1305 = ["chacha20/xchacha20"]
+
+[package.metadata.docs.rs]
+all-features = true
