--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -2,9 +2,9 @@
 name = "chacha20poly1305"
 version = "0.3.0"
 description = """
-Pure Rust implementation of the ChaCha20Poly1305 Authenticated Encryption
-with Additional Data Cipher (RFC 8439) with optional architecture-specific
-hardware acceleration
+Pure Rust implementation of the ChaCha20Poly1305 (and XChaCha20Poly1305)
+Authenticated Encryption with Additional Data Ciphers (RFC 8439) with optional
+architecture-specific hardware acceleration
 """
 authors = ["RustCrypto Developers"]
 edition = "2018"
