ring: Trait wrappers for *ring* AES-GCM and ChaCha20Poly1305
Impls an `aead::{Aead, NewAead}`-compatible interface for the *ring*
crate's AEAD implementations.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,12 @@ matrix:
       env: {} # clear `-D warnings` above; allow warnings
     - name: "Rust: stable (thumbv7em-none-eabihf)"
       rust: stable
-      install:
-        - rustup target add thumbv7em-none-eabihf
-      script:
-        - cargo build --all --target thumbv7em-none-eabihf --release
+      install: rustup target add thumbv7em-none-eabihf
+      script: cargo build --all --exclude ring-aead --target thumbv7em-none-eabihf --release
     - name: rustfmt
       rust: stable
-      install:
-        - rustup component add rustfmt
-      script:
-        - cargo fmt --all -- --check
+      install: rustup component add rustfmt
+      script: cargo fmt --all -- --check
     - name: clippy
       rust: stable
       install:
