--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -3,7 +3,7 @@ name = "chacha20poly1305"
 version = "0.3.1"
 description = """
 Pure Rust implementation of the ChaCha20Poly1305 Authenticated Encryption
-with Additional Data Ciphers (RFC 8439) with optional architecture-specific
+with Additional Data Cipher (RFC 8439) with optional architecture-specific
 hardware acceleration. Also contains implementations of the XChaCha20Poly1305
 extended nonce variant of ChaCha20Poly1305, and the reduced-round
 ChaCha8Poly1305 and ChaCha12Poly1305 lightweight variants.
