aes-gcm/chacha20poly1305: add NCC audit notes to doc
Updates the README.md files and crate documentation for the `aes-gcm`
and `chacha20poly1305` crates to reflect the NCC audit findings:

https://research.nccgroup.com/2020/02/26/public-report-rustcrypto-aes-gcm-and-chacha20poly1305-implementation-review/

--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -16,7 +16,7 @@ keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
 categories = ["cryptography", "no-std"]
 
 [badges]
-maintenance = { status = "experimental" }
+maintenance = { status = "actively-maintained" }
 
 [dependencies]
 aead = { version = "0.2", default-features = false }
