--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -18,6 +18,7 @@ keywords = ["aead", "chacha20", "poly1305", "xchacha20", "xchacha20poly1305"]
 categories = ["cryptography", "no-std"]
 
 [badges]
+codecov = { repository = "RustCrypto/AEADs", branch = "master", service = "github" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
