.github: rename coverage job to "codecov"

--- a/.github/workflows/workspace.yml
+++ b/.github/workflows/workspace.yml
@@ -38,8 +38,7 @@ jobs:
           components: clippy
       - run: cargo clippy --all-features -- -D warnings
 
-  coverage:
-    name: Code Coverage
+  codecov:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
