--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -3,10 +3,10 @@ on:
   pull_request:
     paths: Cargo.lock
   push:
-    branches: develop
+    branches: master
     paths: Cargo.lock
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
 
 jobs:
   security_audit:
@@ -18,7 +18,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.cargo/bin
-          key: ${{ runner.os }}-cargo-audit-v0.11.2
+          key: ${{ runner.os }}-cargo-audit-v0.12
       - uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
