--- a/.github/workflows/crypto_box.yml
+++ b/.github/workflows/crypto_box.yml
@@ -1,4 +1,5 @@
 name: crypto_box
+
 on:
   pull_request:
     paths:
@@ -6,109 +7,51 @@ on:
       - "Cargo.*"
   push:
     branches: master
-    paths:
-      - "crypto_box/**"
-      - "Cargo.*"
+
+defaults:
+  run:
+    working-directory: crypto_box
+
+env:
+  CARGO_INCREMENTAL: 0
+  RUSTFLAGS: "-Dwarnings"
 
 jobs:
-  # TODO: test no_std builds when rust-lang/cargo#7916 is on stable
-  #  build:
-  #    runs-on: ubuntu-latest
-  #    strategy:
-  #      matrix:
-  #        target:
-  #          - thumbv7em-none-eabi
-  #          - wasm32-unknown-unknown
-  #        toolchain:
-  #          - 1.40.0 # MSRV
-  #          - stable
-  #          - beta
-  #          - nightly
-  #    steps:
-  #      - name: Checkout sources
-  #        uses: actions/checkout@v1
-  #
-  #      - name: Cache cargo registry
-  #        uses: actions/cache@v1
-  #        with:
-  #          path: ~/.cargo/registry
-  #          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('Cargo.lock') }}
-  #
-  #      - name: Cache cargo index
-  #        uses: actions/cache@v1
-  #        with:
-  #          path: ~/.cargo/git
-  #          key: ${{ runner.os }}-cargo-index-${{ hashFiles('Cargo.lock') }}
-  #
-  #      - name: Cache cargo build
-  #        uses: actions/cache@v1
-  #        with:
-  #          path: target
-  #          key: ${{ runner.os }}-rust-${{ matrix.toolchain }}-${{ matrix.target }}-cargo-build-target-${{ hashFiles('Cargo.lock') }}
-  #
-  #      - name: Install toolchain
-  #        uses: actions-rs/toolchain@v1
-  #        with:
-  #          target: ${{ matrix.target }}
-  #          toolchain: ${{ matrix.toolchain }}
-  #          override: true
-  #
-  #      - name: Run cargo build --no-default-features
-  #        working-directory: crypto_box
-  #        env:
-  #          CARGO_INCREMENTAL: 0
-  #          RUSTFLAGS: -D warnings
-  #        run: cargo build --no-default-features --release --target ${{ matrix.target }}
+#  # TODO: test no_std builds when rust-lang/cargo#7916 is on stable
+#  build:
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        rust:
+#          - 1.41.0 # MSRV
+#          - stable
+#        target:
+#          # - armv7-none-eabi TODO: test after MSRV is bumped to 1.42
+#          - thumbv7em-none-eabi
+#          - wasm32-unknown-unknown
+#    steps:
+#      - uses: actions/checkout@v1
+#      - uses: actions-rs/toolchain@v1
+#        with:
+#          profile: minimal
+#          toolchain: ${{ matrix.rust }}
+#          target: ${{ matrix.target }}
+#          override: true
+#      - run: cargo build --no-default-features --release --target ${{ matrix.target }}
 
   test:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-        toolchain:
-          - 1.40.0 # MSRV
+        rust:
+          - 1.41.0 # MSRV
           - stable
-    runs-on: ${{ matrix.platform }}
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v1
-
-      - name: Cache cargo registry
-        uses: actions/cache@v1
+      - uses: actions/checkout@v1
+      - uses: actions-rs/toolchain@v1
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v1
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('Cargo.lock') }}
-
-      - name: Cache cargo build
-        uses: actions/cache@v1
-        with:
-          path: target
-          key: ${{ runner.os }}-rust-${{ matrix.toolchain }}-cargo-build-target-${{ hashFiles('Cargo.lock') }}
-
-      - name: Install toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ matrix.toolchain }}
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
           override: true
-
-      - name: Run cargo test --lib
-        working-directory: crypto_box
-        env:
-          CARGO_INCREMENTAL: 0
-          RUSTFLAGS: -D warnings
-        run: cargo test --lib --release
-
-      - name: Run cargo test --all-features
-        working-directory: crypto_box
-        env:
-          CARGO_INCREMENTAL: 0
-          RUSTFLAGS: -D warnings
-        run: cargo test --all-features --release
+      - run: cargo test --lib --release
+      - run: cargo test --all-features --release
