--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -16,12 +16,12 @@ keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "0.2", default-features = false }
-aes = { version = "0.3", optional = true }
-block-cipher-trait = "0.6"
-ghash = { version = "0.2.2", default-features = false }
+aead = { version = "= 0.3.0-pre", default-features = false }
+aes = { version = "= 0.4.0-pre", optional = true }
+block-cipher = "= 0.7.0-pre"
+ghash = { version = "0.3.0-pre", default-features = false }
 subtle = { version = "2", default-features = false }
-zeroize = { version = "1", default-features = false }
+zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
 criterion = "0.3.0"
