--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ aes = { git = "https://github.com/RustCrypto/block-ciphers" }
 aead = { git = "https://github.com/RustCrypto/traits" }
 block-cipher = { git = "https://github.com/RustCrypto/traits" }
 ghash = { git = "https://github.com/RustCrypto/universal-hashes" }
+polyval = { git = "https://github.com/RustCrypto/universal-hashes" }
 universal-hash = { git = "https://github.com/RustCrypto/traits" }
