--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -16,10 +16,10 @@ keywords = ["aead", "aes", "aes-gcm", "encryption", "siv"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "0.2", default-features = false }
-aes = { version = "0.3", optional = true }
-block-cipher-trait = "0.6"
-polyval = { version = "0.3", default-features = false }
+aead = { version = "0.3.0-pre", default-features = false }
+aes = { version = "0.4.0-pre", optional = true }
+block-cipher = "0.7.0-pre"
+polyval = { version = "0.4.0-pre", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
