aes-siv: `aead` crate upgrade
Upgrades to the `aead` v0.3.0-pre crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,12 @@ members = [
 aes = { git = "https://github.com/RustCrypto/block-ciphers" }
 aead = { git = "https://github.com/RustCrypto/traits" }
 block-cipher = { git = "https://github.com/RustCrypto/traits" }
+crypto-mac = { git = "https://github.com/RustCrypto/traits" }
+cmac = { git = "https://github.com/RustCrypto/MACs" }
+ctr = { git = "https://github.com/RustCrypto/stream-ciphers" }
+dbl = { git = "https://github.com/RustCrypto/utils" }
 ghash = { git = "https://github.com/RustCrypto/universal-hashes" }
+pmac = { git = "https://github.com/RustCrypto/MACs" }
 polyval = { git = "https://github.com/RustCrypto/universal-hashes" }
+stream-cipher = { git = "https://github.com/RustCrypto/traits" }
 universal-hash = { git = "https://github.com/RustCrypto/traits" }
