--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -16,14 +16,14 @@ keywords = ["aead", "aes", "encryption", "siv"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "0.2", default-features = false }
-aes = "0.3"
-cmac = "0.2"
-crypto-mac = { version = "0.7", default-features = false }
-ctr = "0.3"
-dbl = { version = "0.2", default-features = false }
-pmac = { version = "0.2", optional = true }
-stream-cipher = { version = "0.3", default-features = false }
+aead = { version = "= 0.3.0-pre", default-features = false }
+aes = "= 0.4.0-pre"
+cmac = "= 0.3.0-pre"
+crypto-mac = { version = "= 0.8.0-pre", default-features = false }
+ctr = "= 0.4.0-pre"
+dbl = { version = "= 0.3.0-pre", default-features = false }
+pmac = { version = "= 0.3.0-pre", optional = true }
+stream-cipher = { version = "= 0.4.0-pre", default-features = false }
 zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
