--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -18,10 +18,10 @@ keywords = ["aead", "chacha20", "poly1305", "xchacha20", "xchacha20poly1305"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "0.2", default-features = false }
-chacha20 = { version = "0.3", features = ["zeroize"], optional = true }
-poly1305 = "0.5"
-stream-cipher = "0.3"
+aead = { version = "= 0.3.0-pre", default-features = false }
+chacha20 = { version = "= 0.4.0-pre", features = ["zeroize"], optional = true }
+poly1305 = "= 0.6.0-pre"
+stream-cipher = "= 0.4.0-pre"
 zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
