ring-aead: `aead` crate upgrade
Upgrades to the `aead` v0.3.0-pre crate.

--- a/ring-aead/Cargo.toml
+++ b/ring-aead/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["cryptography", "no-std"]
 keywords = ["aead", "aes-gcm", "chacha20poly1305", "crypto", "ring"]
 
 [dependencies]
-aead = { version = "0.2", default-features = false }
+aead = { version = "= 0.3.0-pre", default-features = false }
 ring = "0.16"
 zeroize = "1"
 
