--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,6 @@ ghash = { git = "https://github.com/RustCrypto/universal-hashes" }
 pmac = { git = "https://github.com/RustCrypto/MACs" }
 poly1305 = { git = "https://github.com/RustCrypto/universal-hashes" }
 polyval = { git = "https://github.com/RustCrypto/universal-hashes" }
+salsa20 = { git = "https://github.com/RustCrypto/stream-ciphers" }
 stream-cipher = { git = "https://github.com/RustCrypto/traits" }
 universal-hash = { git = "https://github.com/RustCrypto/traits" }
