--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -15,13 +15,15 @@ keywords = ["aead", "salsa20", "poly1305", "xsalsa20"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "0.2", default-features = false }
-salsa20 = { version = "0.4", features = ["xsalsa20", "zeroize"] }
-poly1305 = "0.5"
+aead = { version = "= 0.3.0-pre", default-features = false }
+salsa20 = { version = "= 0.5.0-pre", features = ["xsalsa20", "zeroize"] }
+poly1305 = "= 0.6.0-pre"
+rand_core = { version = "0.5", optional = true }
+subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
 [features]
-default = ["alloc"]
+default = ["alloc", "rand_core"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
 
