Use release versions of `universal-hash` crates
Updates the following UHF deps to use https://crates.io releases:

- `ghash` v0.3.0
- `polyval` v0.4.0
- `poly1305` v0.6.0

--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -19,7 +19,7 @@ categories = ["cryptography", "no-std"]
 aead = { version = "0.3", default-features = false }
 aes = { version = "0.4", optional = true }
 block-cipher = "0.7"
-polyval = { version = "0.4.0-pre", default-features = false }
+polyval = { version = "0.4", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
