--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -17,7 +17,7 @@ categories = ["cryptography", "no-std"]
 [dependencies]
 aead = { version = "0.3", default-features = false }
 salsa20 = { version = "= 0.5.0-pre", features = ["xsalsa20", "zeroize"] }
-poly1305 = "= 0.6.0-pre"
+poly1305 = "0.6"
 rand_core = { version = "0.5", optional = true }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
