--- a/crypto_box/Cargo.toml
+++ b/crypto_box/Cargo.toml
@@ -27,7 +27,7 @@ default-features = false
 features = ["u64_backend"]
 
 [dependencies.xsalsa20poly1305]
-version = "0.4.0-pre"
+version = "0.4"
 default-features = false
 features = ["rand_core"]
 path = "../xsalsa20poly1305"
