.github: build benchmarks during `test` step
Per #180 we don't ensure the benchmarks build in CI

This commit tacks a check onto the "test" step (the existing build step
checks builds on unusual architectures) for the crates that have
benchmarks.

--- a/.github/workflows/aes-gcm-siv.yml
+++ b/.github/workflows/aes-gcm-siv.yml
@@ -54,3 +54,4 @@ jobs:
           override: true
       - run: cargo test --lib --release
       - run: cargo test --all-features --release
+      - run: cargo build --benches
