--- a/.github/workflows/aes-gcm.yml
+++ b/.github/workflows/aes-gcm.yml
@@ -54,7 +54,7 @@ jobs:
           override: true
       - run: cargo test --lib --release
       - run: cargo test --all-features --release
-
+      - run: cargo build --benches
 
 
 
