test on native CPU

--- a/.github/workflows/mgm.yml
+++ b/.github/workflows/mgm.yml
@@ -54,4 +54,5 @@ jobs:
           override: true
       - run: cargo test --lib --release
       - run: cargo test --all-features --release
+      - run: RUSTFLAGS="-C target-cpu=native" cargo test --all-features --release
       - run: cargo build --benches
