--- a/.github/workflows/workspace.yml
+++ b/.github/workflows/workspace.yml
@@ -36,7 +36,7 @@ jobs:
           profile: minimal
           toolchain: stable
           components: clippy
-      - run: cargo clippy --all-features -- -D warnings
+      - run: cargo clippy --all --exclude crypto_box --all-features -- -D warnings
 
   codecov:
     runs-on: ubuntu-latest
