aes-gcm/aes-gcm-siv: use `ctr` v0.6.0-pre
The CTR mode implementations used in these crates have been unified and
vendored into the upstream `ctr` crate:

https://github.com/RustCrypto/stream-ciphers/issues/41

--- a/.github/workflows/crypto_box.yml
+++ b/.github/workflows/crypto_box.yml
@@ -62,6 +62,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: 1.41.0 # MSRV
           components: clippy
+          override: true
       - run: cargo clippy -- -D warnings
