--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aes-gcm-siv"
-version = "0.8.0"
+version = "0.9.0-pre"
 description = """
 Pure Rust implementation of the AES-GCM-SIV Misuse-Resistant Authenticated
 Encryption Cipher (RFC 8452) with optional architecture-specific
@@ -19,6 +19,7 @@ categories = ["cryptography", "no-std"]
 aead = { version = "0.3", default-features = false }
 aes = { version = "0.5", optional = true }
 block-cipher = "0.8"
+ctr = "0.6.0-pre"
 polyval = { version = "0.4", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
