--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,11 @@ members = [
     "mgm",
     "xsalsa20poly1305"
 ]
+
+[patch.crates-io]
+aes = { git = "https://github.com/RustCrypto/block-ciphers.git" }
+chacha20 = { git = "https://github.com/RustCrypto/stream-ciphers.git" }
+cmac = { git = "https://github.com/RustCrypto/MACs.git" }
+kuznyechik = { git = "https://github.com/RustCrypto/block-ciphers.git" }
+pmac = { git = "https://github.com/RustCrypto/MACs.git" }
+salsa20 = { git = "https://github.com/RustCrypto/stream-ciphers.git" }
