--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aes-siv"
-version = "0.5.0"
+version = "0.6.0-pre"
 description = """
 Pure Rust implementation of the AES-SIV Misuse-Resistant Authenticated
 Encryption Cipher (RFC 5297) with optional architecture-specific
@@ -17,13 +17,13 @@ categories = ["cryptography", "no-std"]
 
 [dependencies]
 aead = "0.3"
-aes = "0.6"
-cipher = "0.2"
-cmac = "0.5"
-crypto-mac = "0.10"
-ctr = "0.6"
+aes = "0.7.0-pre"
+cipher = "0.3.0-pre.3"
+cmac = "0.6.0-pre"
+crypto-mac = "0.11.0-pre"
+ctr = "0.7.0-pre.2"
 dbl = "0.3"
-pmac = "0.5"
+pmac = "0.6.0-pre"
 zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
