--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ members = [
 aes = { git = "https://github.com/RustCrypto/block-ciphers.git" }
 chacha20 = { git = "https://github.com/RustCrypto/stream-ciphers.git" }
 cmac = { git = "https://github.com/RustCrypto/MACs.git" }
+ghash = { git = "https://github.com/RustCrypto/universal-hashes.git" }
 kuznyechik = { git = "https://github.com/RustCrypto/block-ciphers.git" }
 pmac = { git = "https://github.com/RustCrypto/MACs.git" }
+polyval = { git = "https://github.com/RustCrypto/universal-hashes.git" }
 salsa20 = { git = "https://github.com/RustCrypto/stream-ciphers.git" }
