--- a/.github/workflows/workspace.yml
+++ b/.github/workflows/workspace.yml
@@ -16,18 +16,14 @@ jobs:
   rustfmt:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v1
-
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v1
+      - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
           toolchain: stable
           components: rustfmt
-
-      - name: Run cargo fmt
-        uses: actions-rs/cargo@v1
+          override: true
+          profile: minimal
+      - uses: actions-rs/cargo@v1
         with:
           command: fmt
           args: --all -- --check
@@ -37,52 +33,26 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
-          toolchain: 1.41.0 # MSRV
+          toolchain: 1.49.0 # MSRV (highest in repo)
           components: clippy
+          override: true
+          profile: minimal
       - run: cargo clippy --all --exclude crypto_box --all-features -- -D warnings
 
   codecov:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Cache cargo registry
-        uses: actions/cache@v1
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v1
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('Cargo.lock') }}
-
-      - name: Cache cargo build
-        uses: actions/cache@v1
-        with:
-          path: target
-          key: ${{ runner.os }}-coverage-cargo-build-target-${{ hashFiles('Cargo.lock') }}
-
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
-
-      - name: Run cargo-tarpaulin
-        uses: actions-rs/tarpaulin@v0.1
+      - uses: actions-rs/tarpaulin@v0.1
         with:
           version: latest
           args: --all -- --test-threads 1
-
-      - name: Upload to codecov.io
-        uses: codecov/codecov-action@v1
-
-      - name: Archive code coverage results
-        uses: actions/upload-artifact@v1
+      - uses: codecov/codecov-action@v1
+      - uses: actions/upload-artifact@v1
         with:
           name: code-coverage-report
           path: cobertura.xml
