--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -20,7 +20,7 @@ aead = { version = "0.3", default-features = false }
 aes = { version = "0.7.0-pre", optional = true }
 cipher = "0.3.0-pre.4"
 ctr = "0.7.0-pre.3"
-polyval = { version = "0.4", default-features = false }
+polyval = { version = "=0.5.0-pre", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
