chacha20poly1305: add 32-bit CI target
Runs tests on 32-bit Linux

--- a/.github/workflows/aes-gcm.yml
+++ b/.github/workflows/aes-gcm.yml
@@ -67,7 +67,7 @@ jobs:
       - run: ${{ matrix.deps }}
       - run: cargo test --target ${{ matrix.target }} --release
       - run: cargo test --target ${{ matrix.target }} --release --all-features
-      - run: cargo build --benches
+      - run: cargo build --target ${{ matrix.target }} --benches
 
 
 
