--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -16,10 +16,10 @@ keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "0.3", default-features = false }
-aes = { version = "0.7.0-pre", optional = true }
-cipher = "0.3.0-pre.4"
-ctr = "0.7.0-pre.3"
+aead = { version = "=0.4.0-pre", default-features = false }
+aes = { version = "=0.7.0-pre", optional = true }
+cipher = "=0.3.0-pre.4"
+ctr = "=0.7.0-pre.3"
 ghash = { version = "=0.4.0-pre", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
@@ -29,9 +29,10 @@ hex-literal = "0.2"
 
 [features]
 default = ["aes", "alloc"]
+std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
-std = ["aead/std", "alloc"]
+stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
