--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -19,21 +19,22 @@ keywords = ["aead", "aes", "encryption"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "0.3", default-features = false }
-cipher = "0.3.0-pre.4"
-cmac = "0.6.0-pre"
-ctr = "0.7.0-pre.3"
+aead = { version = "=0.4.0-pre", default-features = false }
+cipher = "=0.3.0-pre.4"
+cmac = "=0.6.0-pre"
+ctr = "=0.7.0-pre.3"
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
+aead = { version = "=0.4.0-pre", features = ["dev"], default-features = false }
 aes = { version = "=0.7.0-pre", features = ["force-soft"] } # Uses `force-soft` for MSRV 1.41
-aead = { version = "0.3", features = ["dev"], default-features = false }
 
 [features]
 default = ["alloc"]
+std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
-std = ["aead/std", "alloc"]
+stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
