--- a/mgm/Cargo.toml
+++ b/mgm/Cargo.toml
@@ -13,17 +13,18 @@ categories = ["cryptography", "no-std"]
 keywords = ["encryption", "aead"]
 
 [dependencies]
-aead = { version = "0.3", default-features = false }
-cipher = "0.3.0-pre.4"
+aead = { version = "=0.4.0-pre", default-features = false }
+cipher = "=0.3.0-pre.4"
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.3.2", features = ["dev"], default-features = false }
-kuznyechik = "0.7.0-pre"
+aead = { version = "=0.4.0-pre", features = ["dev"], default-features = false }
+kuznyechik = "=0.7.0-pre"
 hex-literal = "0.2"
 
 [features]
 default = ["alloc"]
+std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
-std = ["aead/std", "alloc"]
+stream = ["aead/stream"]
