--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -15,8 +15,8 @@ keywords = ["aead", "salsa20", "poly1305", "xsalsa20"]
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-aead = { version = "0.3", default-features = false }
-salsa20 = { version = "0.8.0-pre", features = ["xsalsa20", "zeroize"] }
+aead = { version = "=0.4.0-pre", default-features = false }
+salsa20 = { version = "=0.8.0-pre", features = ["xsalsa20", "zeroize"] }
 poly1305 = "0.6"
 rand_core = { version = "0.5", optional = true }
 subtle = { version = "2", default-features = false }
@@ -24,9 +24,10 @@ zeroize = { version = "1", default-features = false }
 
 [features]
 default = ["alloc", "rand_core"]
+std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
-std = ["aead/std", "alloc"]
+stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
