chacha20poly1305: add Wycheproof test vectors
Created from:
https://github.com/google/wycheproof/blob/2196000605e45d91097147c9c71f26b72af58003/testvectors/chacha20_poly1305_test.json
https://github.com/google/wycheproof/blob/2196000605e45d91097147c9c71f26b72af58003/testvectors/xchacha20_poly1305_test.json

--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -24,6 +24,9 @@ cipher = "=0.3.0-pre.4"
 poly1305 = "0.6"
 zeroize = { version = "1", default-features = false }
 
+[dev-dependencies]
+aead = { version = "0.4", features = ["dev"], default-features = false }
+
 [features]
 default = ["alloc", "chacha20", "xchacha20poly1305"]
 std = ["aead/std", "alloc"]
