--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -18,8 +18,8 @@ categories = ["cryptography", "no-std"]
 [dependencies]
 aead = { version = "0.4", default-features = false }
 aes = { version = "=0.7.0-pre", optional = true }
-cipher = "=0.3.0-pre.4"
-ctr = "=0.7.0-pre.3"
+cipher = "0.3"
+ctr = "=0.7.0-pre.4"
 ghash = { version = "=0.4.0-pre", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
