--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -18,10 +18,10 @@ categories = ["cryptography", "no-std"]
 [dependencies]
 aead = "0.4"
 aes = "=0.7.0-pre"
-cipher = "=0.3.0-pre.4"
+cipher = "0.3"
 cmac = "=0.6.0-pre"
-crypto-mac = "=0.11.0-pre"
-ctr = "=0.7.0-pre.3"
+crypto-mac = "0.11"
+ctr = "=0.7.0-pre.4"
 dbl = "0.3"
 pmac = "=0.6.0-pre"
 zeroize = { version = "1", default-features = false }
