--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -14,7 +14,7 @@ keywords = ["encryption", "aead"]
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
-cipher = { version = "=0.3.0-pre.4", default-features = false }
+cipher = { version = "0.3", default-features = false }
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
