--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -20,9 +20,9 @@ categories = ["cryptography", "no-std"]
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
-cipher = "=0.3.0-pre.4"
+cipher = "0.3"
 cmac = "=0.6.0-pre"
-ctr = "=0.7.0-pre.3"
+ctr = "=0.7.0-pre.4"
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
