--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -21,7 +21,7 @@ categories = ["cryptography", "no-std"]
 [dependencies]
 aead = { version = "0.4", default-features = false }
 cipher = "0.3"
-cmac = "=0.6.0-pre"
+cmac = "0.6"
 ctr = "0.7"
 subtle = { version = "2", default-features = false }
 
