--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -18,13 +18,13 @@ categories = ["cryptography", "no-std"]
 aead = { version = "0.4", default-features = false }
 salsa20 = { version = "0.8", features = ["xsalsa20", "zeroize"] }
 poly1305 = "0.7"
-rand_core = { version = "0.5", optional = true }
+rand_core = { version = "0.6", optional = true }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
 [features]
 default = ["alloc", "rand_core"]
-std = ["aead/std", "alloc"]
+std = ["aead/std", "alloc", "rand_core/std"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
 stream = ["aead/stream"]
